<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="10dp"
    android:paddingVertical="15dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_n_your_chats"
        android:textColor="#0C0101"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_bg_2"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bg_1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>

</RelativeLayout>