<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/round_5"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/grant_permissions_to"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/OrderStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/status_folder_permission"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_1"
                android:gravity="center"
                android:text="@string/grant"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Promotional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/whatsapp_images_private_folder"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_1"
                android:gravity="center"
                android:text="@string/grant"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/DeliveryApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/whatsapp_video_private_folder"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_1"
                android:gravity="center"
                android:text="@string/grant"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/DeliverySms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/whatsapp_audio_private_folder"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_1"
                android:gravity="center"
                android:text="@string/grant"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/whatsapp_voice_notes_folder_permission"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/button5"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_1"
                android:gravity="center"
                android:text="@string/grant"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>